tests/negativeTests/typeMismatch2.rit
a = 1
b = 2.5
a = b
